maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:33: error: type mismatch;
 found   : Unit
 required: plm.universe.Direction
      {setDirection(trouve());avance()}
                          ^ShortestPathMaze:42: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
          {return(Direction.EAST)}
                            ^ShortestPathMaze:42: warning: enclosing method trouve has result type Unit: return value discarded
          {return(Direction.EAST)}
           ^ShortestPathMaze:44: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
          {return(Direction.WEST)}
                            ^ShortestPathMaze:44: warning: enclosing method trouve has result type Unit: return value discarded
          {return(Direction.WEST)}
           ^ShortestPathMaze:46: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
          {return(Direction.SOUTH)}
                            ^ShortestPathMaze:46: warning: enclosing method trouve has result type Unit: return value discarded
          {return(Direction.SOUTH)}
           ^ShortestPathMaze:48: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
          {return(Direction.NORTH)}
                            ^ShortestPathMaze:48: warning: enclosing method trouve has result type Unit: return value discarded
          {return(Direction.NORTH)}
           ^