maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
    val l = getMondeLargeur()
    val h = getMondeHauteur()
    var a = 0
    var b = 0
    
    for (i<-0 to h-1){
        for(j<- 0 to l-1)
            {if (aBiscuit(i,j))
                {a=i;b=j;setIndication(i,j,0)}}}
    var compteur = 1
    var k= 0
  
    while (compteur<h*l)
  
  {
    for (x<- 0 to h-1){
        for(y<- 0 to l-1)
     {if ((getIndication(x,y)==9999) && y<l-1 && !aMurNord(x,y+1) && (getIndication(x,y+1)==k))
                {setIndication(x,y,k+1);compteur+=1}
      if (getIndication(x,y)==9999 && y>0 && !aMurNord(x,y) && getIndication(x,y-1)==k)
                {setIndication(x,y,k+1);compteur+=1}
      if ((getIndication(x,y)==9999) && x>0 && !aMurOuest(x,y)&& getIndication(x-1,y)==k)
                {setIndication(x,y,k+1);compteur+=1}
      if ((getIndication(x,y)==9999) && x<h-1 && !aMurOuest(x+1,y)&& getIndication(x+1,y)==k)
                {setIndication(x,y,k+1);compteur+=1}}
     
    }
  k+=1
    }
  while (!estSurBiscuit())
      {setDirection(trouve());avance()}
  

  prendBiscuit()
}
def trouve()
    {val (x,y) = (getX(),getY())
     val i = getIndication(x,y)
     if (getIndication(x+1,y)==i-1)
          {return(Direction.EAST)}
     if (getIndication(x-1,y)==i-1)
          {return(Direction.WEST)}
     if (getIndication(x,y+1)==i-1)
          {return(Direction.SOUTH)}
     if (getIndication(x,y-1)==i-1)
          {return(Direction.NORTH)}
    }
